--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           - ubuntu-latest
           - macOS-latest
           - macOS-11
-##          - windows-2019
+          - windows-2019
         raku-version:
           - 'latest'
           - '2022.02'
