try for a wider range of Windows CI build platforms

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,12 +16,13 @@ jobs:
           - ubuntu-latest
           - macOS-latest
           - windows-2019
+          - windows-latest
         raku-version:
           - 'latest'
           - '2022.02'
-        exclude:
-          - os: windows-2019
-            raku-version: 'latest'
+##        exclude:
+##          - os: windows-2019
+##            raku-version: 'latest'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
