seems we do need to exclude some Windows CI tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,11 @@ jobs:
         raku-version:
           - 'latest'
           - '2022.02'
-##        exclude:
-##          - os: windows-2019
-##            raku-version: 'latest'
+        exclude:
+          - os: windows-2019
+            raku-version: 'latest'
+          - os: windows-latest
+            raku-version: 'latest'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
