--- a/Makefile.in
+++ b/Makefile.in
@@ -103,7 +103,7 @@ doc : Pod-To-Markdown-installed docs/index.md docs/Attr.md docs/Attr/Map.md docs
       docs/Dtd.md docs/Dtd/AttrDecl.md  docs/Dtd/Entity.md docs/Dtd/ElementDecl.md docs/Dtd/Notation.md docs/Dtd/ElementContent.md docs/DOM.md docs/Element.md docs/Enums.md docs/EntityRef.md docs/ErrorHandling.md docs/InputCallback.md docs/Item.md docs/Namespace.md docs/HashMap.md docs/Raw.md\
       docs/Node.md docs/Node/List.md docs/Node/Set.md docs/PI.md docs/RelaxNG.md docs/Text.md docs/Pattern.md\
       docs/Parser.md docs/PushParser.md docs/RegExp.md docs/Reader.md docs/Schema.md\
-      docs/XPath/Context.md docs/XPath/Expression.md\
+      docs/XInclude/Context.md docs/XPath/Context.md docs/XPath/Expression.md\
       docs/SAX/Handler/SAX2.md docs/SAX/Handler/XML.md\
       docs/SAX/Builder.md docs/Threads.md\
       docs/_CharacterData.md
