--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           - ubuntu-latest
           - macOS-latest
           - windows-2019
-          - windows-latest
+##          - windows-latest
         raku-version:
           - 'latest'
           - '2022.02'
